fixed toggles combinations

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <ion-item lines="full">
-  <ion-toggle color="primary" [disabled]="this.haveToSwitchBecauseFlyMode" (click)="this.isOn = !this.isOn"></ion-toggle
+  <ion-toggle color="primary" [disabled]="this.haveToSwitchBecauseFlyMode==true" [(ngModel)]="this.switchOn" (click)="this.isOn = !this.isOn"></ion-toggle
   ><ion-label>Switch ALL</ion-label>
 </ion-item>
 
@@ -14,6 +14,7 @@
           [dataValue]="item"
           [isOn]="this.isOn"
           (emit)="switchAll($event)"
+          (emitItself)="this.updateChildren($event)"
         ></app-item>
       </ion-item>
     </ion-row>
