--- a/src/app/home/item/item.component.html
+++ b/src/app/home/item/item.component.html
@@ -5,12 +5,9 @@
       <ion-toggle
         color="primary"
         [(ngModel)]="this.dataValue.isOn"
-        (click)="this.inputField = ''; this.switchForFlyMode()"
-        [disabled]="
-          this.dataValue.name !== 'Modalità aereo' &&
-          this.haveToSwitchBecauseFlyMode === true
-        "
-      ></ion-toggle>
+        (click)="this.inputField = ''; this.switchForFlyMode(); this.sendItselfToParent()"
+        [disabled]="this.dataValue.name !== 'Modalità aereo' && this.haveToSwitchBecauseFlyMode === true">
+      </ion-toggle>
     </ion-col>
     <ion-col size="9">
       <ion-input
