--- a/src/app/home/item/item.component.html
+++ b/src/app/home/item/item.component.html
@@ -5,8 +5,8 @@
       <ion-toggle
         color="primary"
         [(ngModel)]="this.dataValue.isOn"
-        (click)="this.inputField = ''; this.switchForFlyMode(); this.sendItselfToParent()"
-        [disabled]="this.dataValue.name !== 'Modalità aereo' && this.haveToSwitchBecauseFlyMode === true">
+        (click)="this.inputField = ''; this.switchForFlyMode(); this.sendChildToParentToUpdateGeneralButton()"
+        [disabled]="this.dataValue.name !== 'Modalità aereo' && this.disableBecauseFlyMode === true">
       </ion-toggle>
     </ion-col>
     <ion-col size="9">
